--- a/paper/Makefile
+++ b/paper/Makefile
@@ -2,7 +2,10 @@ all: thesis.pdf
 
 clean:
 	latexmk -C
+	rm -f thesis.run.xml
+	rm -f thesis.synctex.gz
+
 
 %.pdf: %.tex
-	 		 latexmk --shell-escape -pdf $<
-			 latexmk -c
+	 latexmk --shell-escape -pdf $<
+	 latexmk -c
