--- a/code/junit/example/build.gradle
+++ b/code/junit/example/build.gradle
@@ -5,7 +5,7 @@ buildscript {
     }
 
     dependencies {
-        classpath group: 'io.github.thepieterdc.velocity', name: 'velocity-junit', version: '0.0.1-SNAPSHOT'
+        classpath 'io.github.thepieterdc.velocity:velocity-junit:0.0.1-SNAPSHOT'
     }
 }
 
@@ -20,14 +20,13 @@ group 'io.github.thepieterdc.velocity'
 version '0.0.1-SNAPSHOT'
 
 sourceCompatibility = 11
+targetCompatibility = 11
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    compile 'org.yaml:snakeyaml:1.25'
-    implementation 'org.yaml:snakeyaml:1.25'
     testCompile group: 'junit', name: 'junit', version: '4.13'
 }
 
@@ -38,5 +37,5 @@ velocity {
 }
 
 wrapper {
-    gradleVersion = '6.1.1'
+    gradleVersion = '6.2.1'
 }
