--- a/code/junit/build.gradle
+++ b/code/junit/build.gradle
@@ -29,6 +29,8 @@ dependencies {
     compile 'org.jacoco:org.jacoco.report:0.8.5'
     compile 'org.yaml:snakeyaml:1.25'
 
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.10.3'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.10.3'
     implementation 'junit:junit:4.13'
 }
 
