--- a/code/junit/example/build.gradle
+++ b/code/junit/example/build.gradle
@@ -31,7 +31,7 @@ dependencies {
 }
 
 velocity {
-    outputs.upToDateWhen { false }
+    repository 'https://github.com/thepieterdc/random-java'
 }
 
 wrapper {
