--- a/code/web/Dockerfile
+++ b/code/web/Dockerfile
@@ -4,6 +4,12 @@ FROM gcc:8
 # Install required libraries.
 RUN apt update && apt install -y cmake libpqxx-dev
 
+# Install dockerize.
+ENV DOCKERIZE_VERSION v0.6.0
+RUN wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-alpine-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
+    && tar -C /usr/local/bin -xzvf dockerize-alpine-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
+    && rm dockerize-alpine-linux-amd64-$DOCKERIZE_VERSION.tar.gz
+
 # Copy the source files.
 RUN mkdir /apps
 WORKDIR /apps
@@ -14,4 +20,4 @@ RUN cmake .
 RUN make -j4
 
 # Start the webserver
-CMD ["./server",  "postgres://velocity:velocity@database:5432/velocity", "8080"]
+CMD dockerize -wait "tcp://database:5432" -timeout 1m ./server "postgres://velocity:velocity@database:5432/velocity" 8080
