--- a/code/web/Dockerfile
+++ b/code/web/Dockerfile
@@ -2,7 +2,7 @@
 FROM gcc:8
 
 # Install required libraries.
-RUN apt update && apt install -y cmake libarchive-dev libpugixml-dev libpqxx-dev
+RUN apt update && apt install -y cmake libpqxx-dev
 
 # Copy the source files.
 RUN mkdir /apps
@@ -11,7 +11,7 @@ COPY . /apps/
 
 # Compile the application.
 RUN cmake .
-RUN make -j2 server
+RUN make -j4
 
 # Start the webserver
 CMD ["./server",  "postgres://velocity:velocity@database:5432/velocity", "8080"]
