Allow the server to be configured in build.gradle

--- a/code/junit/example/build.gradle
+++ b/code/junit/example/build.gradle
@@ -33,6 +33,7 @@ dependencies {
 velocity {
     base 'src/main/java/'
     repository 'https://github.com/thepieterdc/random-java'
+    server 'http://172.19.0.3:8080'
 }
 
 wrapper {
