Implement analysis tool

--- a/code/docker-compose.yml
+++ b/code/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       - '5432:5432'
     restart: always
 
-  predict:
+  cli:
     build: 'predictor/'
     depends_on:
       - database
